<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.peterloos.beziersplines.activities.AboutActivity">

    <TextView
        android:id="@+id/textview_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="12dp"
        android:autoLink="web"
        android:gravity="center"
        android:text="@string/about_link"
        android:textColorLink="@color/material_blue_A200"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textview_version_date"
        style="@style/ThemeOverlay.MyTextDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/textview_website"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/app_version_date"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textview_version_number"
        style="@style/ThemeOverlay.MyTextDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/textview_version_date"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/app_version"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textview_title"
        style="@style/ThemeOverlay.MyTextDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/textview_version_number"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/app_main_title"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/thumbnail_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/textview_title"
        android:gravity="center">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bezier_app_icon_content_description"
            android:scaleType="centerCrop"
            android:src="@mipmap/bezier_app_icon" />

    </LinearLayout>

</RelativeLayout>
