<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.peterloos.beziersplines.activities.AboutActivity">

    <TextView
        android:id="@+id/textview_title"
        style="@style/ThemeOverlay.MyTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="25sp"
        android:text="@string/app_main_title"
        app:layout_constraintBottom_toTopOf="@+id/textview_version_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textview_version_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        android:text="@string/app_version"
        app:layout_constraintBottom_toTopOf="@+id/textview_version_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_title" />

    <TextView
        android:id="@+id/textview_version_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textSize="15sp"
        android:text="@string/app_version_date"
        app:layout_constraintBottom_toTopOf="@+id/textview_website"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_version_number" />

    <TextView
        android:id="@+id/textview_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:autoLink="web"
        android:textSize="25sp"
        android:text="@string/about_link"
        android:textColorLink="@color/material_blue_A200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_version_date" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:src="@mipmap/bezier_app_icon"
        android:scaleType="centerCrop"
        android:contentDescription="@string/bezier_app_icon_content_description"
        app:layout_constraintBottom_toTopOf="@+id/textview_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        app:layout_constraintVertical_chainStyle="packed" />

</android.support.constraint.ConstraintLayout>