<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.peterloos.beziersplines.activities.MainActivity">

    <TableLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:animateLayoutChanges="true"
        android:shrinkColumns="0,1"
        android:stretchColumns="2">

        <TableRow android:id="@+id/resolution_seekbar">

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/resolution" />

            <TextView
                android:id="@+id/textview_resolution"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp" />

            <SeekBar
                android:id="@+id/seekbar_resolution"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:max="100"
                android:progress="1" />
        </TableRow>

        <TableRow android:id="@+id/t_seekbar">

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/t"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textview_t"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp" />

            <SeekBar
                android:id="@+id/seekbar_t"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:max="100"
                android:progress="1" />
        </TableRow>
    </TableLayout>

    <ViewSwitcher
        android:id="@+id/viewswitcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right">

        <de.peterloos.beziersplines.views.BezierView
            android:id="@+id/bezier_view_withoutgrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/material_blue_grey_200" />

        <de.peterloos.beziersplines.views.BezierGridView
            android:id="@+id/bezier_view_withgrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/material_blue_grey_200" />
    </ViewSwitcher>

    <TableLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/viewswitcher"
        android:layout_marginEnd="10dp"
        android:shrinkColumns="0,2"
        android:stretchColumns="1">

        <TableRow
            android:layout_marginBottom="1dp"
            android:layout_marginTop="10dp">

            <Spinner
                android:id="@+id/spinner_editormode"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:entries="@array/editor_modes" />

            <TextView android:layout_height="match_parent" />

            <CheckBox
                android:id="@+id/checkbox_show_construction"
                android:layout_height="match_parent"
                android:text="@string/show_construction" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp"
            android:layout_marginTop="1dp">

            <TextView
                android:id="@+id/textview_info"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-light" />

            <TextView android:layout_height="match_parent" />

            <CheckBox
                android:id="@+id/checkbox_show_snaptogrid"
                android:layout_height="match_parent"
                android:text="@string/show_snaptogrid" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
